Initial add of Phase wrapping and unwrapping code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,7 +40,9 @@ set(SOURCES
 	CalibrationData.cpp
     Display.h
     Display.cpp
-
+	Utils.h
+	Utils.cpp
+	
     NFringePhaseWrapper.h
     NFringePhaseWrapper.cpp
     TwoWavelengthPhaseUnwrapper.h
