Seperated CMakeLists so that we can have a project level on and a source level on. Soon we will have a test one as well (Yay unit tests)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,50 +2,27 @@
 # 2010 Nik Karpinsky
 #
 
-cmake_minimum_required(VERSION 2.6)
-
-# Set package properties
-project(PortalCalibration)
-
 ###
-# CMake Modules Paths
+# Add our sources
 
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_SOURCE_DIR}/../CMakeModules")
-
-###
-# Perform build configuration of dependencies
-find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS})
-set (LIBS ${LIBS} ${OpenCV_LIBS})
-
-## QT Related stuff
-find_package(Qt4 COMPONENTS QtCore REQUIRED)
-include(${QT_USE_FILE})
-set (LIBS ${LIBS} ${QT_LIBRARIES})
-
-## Lens Stuff
-add_subdirectory(../Libraries/Lens/src/lens ${PROJECT_BINARY_DIR}/Libraries/Lens)
-include_directories(../Libraries/Lens/src)
-include_directories(${LENS_INCLUDE_DIRS})
-set(LIBS ${LIBS} lens "${LENS_LIBRARIES}")
-
-###
-# Build the project
+set(
+    HEADERS
+    CalibrationEngine.h
+    CalibrationData.h
+    Display.h
+    Utils.h
+    NFringeStructuredLight.h
+    TwoWavelengthPhaseUnwrapper.h
+    )
 
 set(SOURCES
     Main.cpp
-    CalibrationEngine.h
     CalibrationEngine.cpp
-	CalibrationData.h
 	CalibrationData.cpp
-    Display.h
     Display.cpp
-	Utils.h
 	Utils.cpp
 	
-    NFringeStructuredLight.h
     NFringeStructuredLight.cpp
-    TwoWavelengthPhaseUnwrapper.h
     TwoWavelengthPhaseUnwrapper.cpp
 	)
 	
