--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,13 @@ include_directories(Libraries/Lens/src)
 include_directories(${LENS_INCLUDE_DIRS})
 set(LIBS ${LIBS} lens "${LENS_LIBRARIES}")
 
+option(PortalCalibration_UNIT_TESTS "Generate PortalCalibration unit tests" OFF)
+if(PortalCalibration_UNIT_TESTS)
+    add_subdirectory(Libraries/GTest)
+    include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+    add_subdirectory(test)
+endif()
+
 ###
 # Add the src directory so that we can make the project
 add_subdirectory(src)
