--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(RunUnitTests
     ${TESTS})
 
 # Link against GTest and GText Main
-target_link_libraries(RunUnitTests gtest gtest_main)
+target_link_libraries(RunUnitTests gtest gtest_main ${LIBS})
 
 add_test(NAME RunUnitTests
     COMMAND RunUnitTests)
