--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,16 +1,18 @@
 # Enable testing and find GTest
 enable_testing()
 
+set(PROJECT_UNIT_TEST_NAME "${PROJECT_NAME}UnitTests")
+
 # Add our tests
 set(TESTS
     NFringeStructuredLightTest.cpp
     )
 
-add_executable(RunUnitTests
+add_executable(${PROJECT_UNIT_TEST_NAME}
     ${TESTS})
 
 # Link against GTest and GText Main
-target_link_libraries(RunUnitTests gtest gtest_main ${LIBS})
+target_link_libraries(${PROJECT_UNIT_TEST_NAME} gtest gtest_main ${LIBS})
 
-add_test(NAME RunUnitTests
-    COMMAND RunUnitTests)
+add_test(NAME ${PROJECT_UNIT_TEST_NAME}
+    COMMAND ${PROJECT_UNIT_TEST_NAME})
