Added a test case for the phase unwrapper

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(PROJECT_UNIT_TEST_NAME "${PROJECT_NAME}UnitTests")
 # Add our tests
 set(TESTS
     NFringeStructuredLightTest.cpp
+    TwoWavelengthPhaseUnwrapperTest.cpp
     )
 
 add_executable(${PROJECT_UNIT_TEST_NAME}
