Added the scripting interface. Now the entire process can be scripted so that it will be eaiser to calibrate different systems

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@
 ###
 # Add our sources
 set(SOURCES
+    ScriptInterface.cpp
+
     CalibrationEngine.cpp
 	CalibrationData.cpp
     Display.cpp
@@ -21,4 +23,24 @@ file(GLOB
     ../include/*.h
     )
 
-add_library("${PROJECT_NAME}" ${SOURCES} ${HEADERS})
+#   Qt Files
+set(MOCS
+    ../include/ScriptInterface.h
+    ../include/DynamicallyScriptableQObject.h
+    ../include/CalibrationData.h
+    ../include/CalibrationEngine.h
+    ../include/ISerializer.h
+    ../include/JSSerializer.h
+    )
+
+#   ---------------------------------------------------------------------------------------
+#                           Qt Generation
+#   ---------------------------------------------------------------------------------------
+
+qt4_wrap_cpp(GENERATED_SOURCES ${MOCS})
+source_group("Generated Sources - Do Not Edit" FILES ${GENERATED_SOURCES})
+
+#
+#   Add the library
+#
+add_library("${PROJECT_NAME}" ${SOURCES} ${HEADERS} ${GENERATED_SOURCES} ${MOCS})
